log
lu.,  9 de ago. de 2021 12:34:39: 
 tests:  0|4
total_score: 0/70
ed9d2ff
lu.,  9 de ago. de 2021 12:35:39: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function 'heap_top':
heap.c:22:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
d841260
